minor overflow fixes & sidebar fixes

--- a/src/styles/ePP.css
+++ b/src/styles/ePP.css
@@ -8,9 +8,6 @@
     min-height: 100vh;
     margin: 0;
     padding: 0;
-}
-
-html, body{
     overflow: hidden;
 }
 
